hphp/hack/test/typecheck/array_subscript_curly.php.exp
File "array_subscript_curly.php", line 4, characters 10-14:
Use of the `{}` subscript operator is deprecated;  use `[]` instead. (Parsing[1002])
